fixed status bar stretch

--- a/client/src/players/Players.css
+++ b/client/src/players/Players.css
@@ -61,7 +61,7 @@
 .player-status-bar {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: ;
     justify-content: flex-start;
     margin-top: 20px;
 }
